--- a/Parcial/appsettings.json
+++ b/Parcial/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings" { "NayelyContext": "Server=tcp:nayelydazaparcial.database.windows.net,1433;Initial Catalog=NayelyDB;Persist Security Info=False;User ID=nayely;Password={your_password};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" }
 }
