--- a/Parcial/appsettings.json
+++ b/Parcial/appsettings.json
@@ -7,5 +7,5 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings" { "NayelyContext": "Server=tcp:nayelydazaparcial.database.windows.net,1433;Initial Catalog=NayelyDB;Persist Security Info=False;User ID=nayely;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" }
+  "ConnectionStrings": { "NayelyContext": "Server=tcp:nayelydazaparcial.database.windows.net,1433;Initial Catalog=NayelyDB;Persist Security Info=False;User ID=nayely;Password=Passw0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" }
 }
